# minesweeper

./: Cargo.toml  README.md  index.html  style.css
.github/workflows/: deploy.yml
pkg/: minesweeper.js  minesweeper_bg.wasm  package.json
src/: lib.rs
